--- a/services/api-gateway/templates/news-feed-dashboard.html
+++ b/services/api-gateway/templates/news-feed-dashboard.html
@@ -24,6 +24,7 @@
                         <a href="/episodes" class="text-gray-600 hover:text-gray-900">Episodes</a>
                         <a href="/news-feed" class="text-gray-900 font-semibold">News Feed</a>
                         <a href="/collections" class="text-gray-600 hover:text-gray-900">Collections</a>
+                        <a href="/writers" class="text-gray-600 hover:text-gray-900">Writers</a>
                     </div>
                 </div>
             </div>
