--- a/services/api-gateway/templates/writers.html
+++ b/services/api-gateway/templates/writers.html
@@ -25,6 +25,7 @@
                         <a href="/news-feed" class="text-gray-600 hover:text-gray-900">News Feed</a>
                         <a href="/collections" class="text-gray-600 hover:text-gray-900">Collections</a>
                         <a href="/writers" class="text-gray-900 font-semibold">Writers</a>
+                        <a href="/admin-panel" class="text-gray-600 hover:text-gray-900">Admin</a>
                     </div>
                 </div>
             </div>
